--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <script type="application/dart" src="piratebadge.dart"></script>
+    <script type="application/dart" src="main.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
 </html>
