--- a/web/index.html
+++ b/web/index.html
@@ -77,12 +77,10 @@
                           <div class="input-group-btn">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span></button>
                             <ul class="dropdown-menu pull-right">
-                              <li><a href="#">Action</a></li>
-                              <li><a href="#">Another action</a></li>
-                              <li><a href="#">Something else here</a></li>
-                              <li class="divider"></li>
-                              <li><a href="#">Separated link</a></li>
+                              <li><a href="#" class="method-selector">GET</a></li>
+                              <li><a href="#" class="method-selector">POST</a></li>
                             </ul>
+                            <input type="hidden" name="method" class="method">
                           </div><!-- /btn-group -->
                         </div><!-- /input-group -->
                         <ul class="list-inline">
