--- a/web/index.html
+++ b/web/index.html
@@ -75,12 +75,12 @@
                         <div class="input-group">
                           <input type="text" class="form-control">
                           <div class="input-group-btn">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span></button>
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">GET <span class="caret"></span></button>
                             <ul class="dropdown-menu pull-right">
                               <li><a href="#" class="method-selector">GET</a></li>
                               <li><a href="#" class="method-selector">POST</a></li>
                             </ul>
-                            <input type="hidden" name="method" class="method">
+                            <input type="hidden" name="method" class="method" value="GET">
                           </div><!-- /btn-group -->
                         </div><!-- /input-group -->
                         <ul class="list-inline">
