--- a/web/index.html
+++ b/web/index.html
@@ -85,7 +85,7 @@
                         </div><!-- /input-group -->
                         <ul class="list-inline">
                             <div class="row">
-                                <div class="col-lg-8">
+                                <div class="col-lg-8 parameter-container">
                                     <li>
                                         <input type="text" class="form-control parameter-entry" placeholder="Enter a key here!">
                                         <input type="text" class="form-control parameter-entry" placeholder="Enter a value here!">
