--- a/web/index.html
+++ b/web/index.html
@@ -87,8 +87,8 @@
                             <div class="row">
                                 <div class="col-lg-8 parameter-container">
                                     <li>
-                                        <input type="text" class="form-control parameter-entry" placeholder="Enter a key here!">
-                                        <input type="text" class="form-control parameter-entry" placeholder="Enter a value here!">
+                                        <input type="text" class="form-control parameter-entry name" placeholder="Enter a key here!">
+                                        <input type="text" class="form-control parameter-entry value" placeholder="Enter a value here!">
                                         <!-- <i class="fa fa-times remove-icon"></i> -->
                                     </li>
                                     <li><a href="#" class="btn btn-default btn-lg add-parameter-btn">
