fixed adding parameters

--- a/web/index.html
+++ b/web/index.html
@@ -86,11 +86,14 @@
                         <ul class="list-inline">
                             <div class="row">
                                 <div class="col-lg-8 parameter-container">
+                                
                                     <li>
                                         <input type="text" class="form-control parameter-entry name" placeholder="Enter a key here!">
                                         <input type="text" class="form-control parameter-entry value" placeholder="Enter a value here!">
                                         <!-- <i class="fa fa-times remove-icon"></i> -->
                                     </li>
+                                </div>
+                                <div class="col-lg-8">
                                     <li><a href="#" class="btn btn-default btn-lg add-parameter-btn">
                                             <div class="parameter-title">Add parameter</div>
                                             <i class="fa fa-plus add-icon"></i>
