--- a/web/index.html
+++ b/web/index.html
@@ -120,7 +120,9 @@
     <div class="content-section-a">
 
         <div class="container responses">
-
+        
+          <textarea class="area"></textarea>
+        
         </div>
 
     </div>
