--- a/web/index.html
+++ b/web/index.html
@@ -73,7 +73,7 @@
                   <form class="request-form">
                     <div class="form-area">
                         <div class="input-group">
-                          <input type="text" class="form-control">
+                          <input type="text" class="form-control url">
                           <div class="input-group-btn">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">GET <span class="caret"></span></button>
                             <ul class="dropdown-menu pull-right">
@@ -119,10 +119,8 @@
 
     <div class="content-section-a">
 
-        <div class="container responses">
-        
-          <textarea class="area"></textarea>
-        
+        <div class="container output response">
+
         </div>
 
     </div>
